--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -71,34 +71,34 @@ $(function () {
 <table align="center">
     <tr>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Josh">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" title="Josh's Picture">
             </a>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Holly">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" title="Holly's Picture">
             </a>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Joe">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" title="Joe's Picture">
             </a>
         </td>
     </tr>
     <tr>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Izzy">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/SplodgeKat/175.png" title="Izzy's Picture">
             </a>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Matt">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" title="Matt's Picture">
             </a>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Beric">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" align="left" title="Beric's Picture">
             </a>
         </td>
@@ -108,7 +108,7 @@ $(function () {
 <table class="table table-bordered">
 <tr>
 <td><a style="cursor:default" href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" align="left" title="Josh's Picture"></a>
-<h2><span style="font-family: 'Pacifico', cursive;">Josh</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">Eathuis</span></h2></p>
+<h2><span id="Josh" style="font-family: 'Pacifico', cursive;">Josh</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">Eathuis</span></h2></p>
 Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, 
 he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted 
 his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. 
@@ -119,7 +119,7 @@ and if he lifted his head a little he could see his brown belly, slightly domed 
 The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin
 compared with the size of the rest of him, waved about helplessly as he looked.</td></tr>
 <tr><td><a style="cursor:default" href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" align="left" title="Holly's Picture"></a>
-<h2><span style="font-family: 'Pacifico', cursive;">Holly</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;" title="Username">Hollz100</span></h2></p>
+<h2><span id="Holly" style="font-family: 'Pacifico', cursive;">Holly</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;" title="Username">Hollz100</span></h2></p>
 Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, 
 he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted 
 his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. 
@@ -130,7 +130,7 @@ and if he lifted his head a little he could see his brown belly, slightly domed 
 The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin
 compared with the size of the rest of him, waved about helplessly as he looked.</td></tr>
 <tr><td><a style="cursor:default" href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" align="left" title="Joe's Picture"></a>
-<h2><span style="font-family: 'Pacifico', cursive;">Joe</span> <span style="font-size:15px;font-weight:bold;color:red;">MarcyC</span></h2></p>
+<h2><span id="Joe" style="font-family: 'Pacifico', cursive;">Joe</span> <span style="font-size:15px;font-weight:bold;color:red;">MarcyC</span></h2></p>
 Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, 
 he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted 
 his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. 
@@ -143,7 +143,7 @@ compared with the size of the rest of him, waved about helplessly as he looked.<
 <strong style="cursor:pointer;" title="Heh, I made a funny!">ERROR 404: Personal Statement Not Found!</strong></td></tr>
 <tr>
 <td><a style="cursor:default" href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/SplodgeKat/175.png" align="left" title="Izzy's Picture"></a>
-<h2><span style="font-family: 'Pacifico', cursive;">Izzy</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">SplodgeKat</span></h2></p>
+<h2><span id="Izzy" style="font-family: 'Pacifico', cursive;">Izzy</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">SplodgeKat</span></h2></p>
 Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, 
 he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted 
 his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. 
@@ -156,11 +156,11 @@ compared with the size of the rest of him, waved about helplessly as he looked.<
 </tr>
 <tr>
 <td><a style="cursor:default" href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" align="left" title="Matt's Picture"></a>
-<h2><span style="font-family: 'Pacifico', cursive;">Matt</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">Optical_Pyro</span></h2></p>
+<h2><span id="Matt" style="font-family: 'Pacifico', cursive;">Matt</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">Optical_Pyro</span></h2></p>
 Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.</td></tr>
 <tr>
 <td><a style="cursor:default" href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" align="left" title="Beric's Picture"></a>
-<h2><span style="font-family: 'Pacifico', cursive;">Beric</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">UndeadBadger</span></h2> &nbsp;
+<h2><span id="Beric" style="font-family: 'Pacifico', cursive;">Beric</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">UndeadBadger</span></h2> &nbsp;
 <span style="font-size:x-small;">formerly: YoungPrinceLeon</span></p>
 Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.</td></tr>
 </table>
