--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -71,9 +71,23 @@ $(function () {
 <table align="center">
     <tr>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Josh">
+            <a style="cursor:pointer" onclick="ClickImage()">
                 <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" title="Josh's Picture">
             </a>
+            <div id="overlay"></div>
+                <div id="popup">
+                           Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, 
+he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted 
+his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. 
+The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully 
+thin compared with the size of the rest of him, waved about helplessly as he looked. One morning, when Gregor 
+Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, 
+and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. 
+The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin
+compared with the size of the rest of him, waved about helplessly as he looked.
+               <button id="CloseBtn">ClosePopup</button>
+</div>
+<div>
         </td>
         <td>
             <a style="cursor:default" href="//eathuis.github.io/pixelcc#Holly">
