--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -71,9 +71,7 @@ $(function () {
 <table align="center">
     <tr>
         <td>
-            <a style="cursor:pointer" onclick="ClickImage()">
-                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" title="Josh's Picture">
-            </a>
+               <button id="ClickImage"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" title="Josh's Picture"></button>
             <div id="overlay"></div>
                 <div id="popup">
                            Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, 
