--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -41,6 +41,23 @@ $(function () {
     $(window).scroll(sticky_relocate);
     sticky_relocate();
 });
+
+window.onload = function() {
+  document.getElementById("LearnMoreBtn").onclick = function(){
+        var overlay = document.getElementById("overlay");
+        var popup = document.getElementById("popup");
+        overlay.style.display = "block";
+        popup.style.display = "block";
+    };
+    
+  document.getElementById("CloseBtn").onclick = function(){
+        var overlay = document.getElementById("overlay");
+        var popup = document.getElementById("popup");
+        overlay.style.display = "none";
+        popup.style.display = "none";      
+  }
+};
+
 </script>
 <style>
 @import url(http://fonts.googleapis.com/css?family=Mountains+of+Christmas);
