--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -93,7 +93,7 @@ window.onload = function() {
                 <div id="popup">
                          Josh</br>
                          CEO and co-Founder
-               <button id="CloseBtn">ClosePopup</button>
+               <button id="CloseBtn" style="float:right;">ClosePopup</button>
 </div>
 <div>
         </td>
