--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -92,37 +92,52 @@ window.onload = function() {
             <div id="overlay"></div>
                 <div id="popup">
                          Josh</br>
-                         CEO and co-Founder
+                         CEO, co-Founder & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
 </div>
 <div>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Holly">
-                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" title="Holly's Picture">
-            </a>
+            <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" title="Holly's Picture"></button>
+            <div id="overlay"></div>
+                <div id="popup">
+                         Holly</br>
+                         Managing Director & Content Creator
+               <button id="CloseBtn" style="float:right;">Close</button>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Joe">
-                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" title="Joe's Picture">
-            </a>
+            <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" title="Joe's Picture"></button>
+            <div id="overlay"></div>
+                <div id="popup">
+                         Joe</br>
+                         co-Founder, Creative Director & Content Creator
+               <button id="CloseBtn" style="float:right;">Close</button>
         </td>
     </tr>
     <tr>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Izzy">
-                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/SplodgeKat/175.png" title="Izzy's Picture">
-            </a>
+           <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/SplodgeKat/175.png" title="Izzy's Picture"></button>
+            <div id="overlay"></div>
+                <div id="popup">
+                         Izzy</br>
+                         Head Editor & Content Creator
+               <button id="CloseBtn" style="float:right;">Close</button>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Matt">
-                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" title="Matt's Picture">
-            </a>
+            <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" title="Matt's Picture"></button>
+            <div id="overlay"></div>
+                <div id="popup">
+                         Matt</br>
+                         Artist & Content Creator
+               <button id="CloseBtn" style="float:right;">Close</button>
         </td>
         <td>
-            <a style="cursor:default" href="//eathuis.github.io/pixelcc#Beric">
-                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" align="left" title="Beric's Picture">
-            </a>
+            <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" title="Beric's Picture"></button>
+            <div id="overlay"></div>
+                <div id="popup">
+                         Beric</br>
+                         CFO & Content Creator
+               <button id="CloseBtn" style="float:right;">Close</button>
         </td>
     </tr>
 </table></p>
