--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -95,7 +95,6 @@ window.onload = function() {
                          CEO, co-Founder & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
 </div>
-<div>
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" title="Holly's Picture"></button>
@@ -104,6 +103,7 @@ window.onload = function() {
                          Holly</br>
                          Managing Director & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
+               </div>
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" title="Joe's Picture"></button>
@@ -112,6 +112,7 @@ window.onload = function() {
                          Joe</br>
                          co-Founder, Creative Director & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
+            </div>
         </td>
     </tr>
     <tr>
@@ -122,6 +123,7 @@ window.onload = function() {
                          Izzy</br>
                          Head Editor & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
+               </div>
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" title="Matt's Picture"></button>
@@ -130,6 +132,7 @@ window.onload = function() {
                          Matt</br>
                          Artist & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
+               </div>
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" title="Beric's Picture"></button>
@@ -138,6 +141,7 @@ window.onload = function() {
                          Beric</br>
                          CFO & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
+               </div>
         </td>
     </tr>
 </table></p>
