--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -89,8 +89,8 @@ window.onload = function() {
     <tr>
         <td>
                <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" title="Josh's Picture"></button>
-            <div id="overlay"></div>
-                <div id="popup">
+            <div id="overlay1"></div>
+                <div id="popup1">
                          Josh</br>
                          CEO, co-Founder & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
@@ -98,8 +98,8 @@ window.onload = function() {
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" title="Holly's Picture"></button>
-            <div id="overlay"></div>
-                <div id="popup">
+            <div id="overlay2"></div>
+                <div id="popup2">
                          Holly</br>
                          Managing Director & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
@@ -107,8 +107,8 @@ window.onload = function() {
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" title="Joe's Picture"></button>
-            <div id="overlay"></div>
-                <div id="popup">
+            <div id="overlay3"></div>
+                <div id="popup3">
                          Joe</br>
                          co-Founder, Creative Director & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
@@ -118,8 +118,8 @@ window.onload = function() {
     <tr>
         <td>
            <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/SplodgeKat/175.png" title="Izzy's Picture"></button>
-            <div id="overlay"></div>
-                <div id="popup">
+            <div id="overlay4"></div>
+                <div id="popup4">
                          Izzy</br>
                          Head Editor & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
@@ -127,8 +127,8 @@ window.onload = function() {
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" title="Matt's Picture"></button>
-            <div id="overlay"></div>
-                <div id="popup">
+            <div id="overlay5"></div>
+                <div id="popup5">
                          Matt</br>
                          Artist & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
@@ -136,8 +136,8 @@ window.onload = function() {
         </td>
         <td>
             <button id="LearnMoreBtn"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" title="Beric's Picture"></button>
-            <div id="overlay"></div>
-                <div id="popup">
+            <div id="overlay6"></div>
+                <div id="popup6">
                          Beric</br>
                          CFO & Content Creator
                <button id="CloseBtn" style="float:right;">Close</button>
