--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -74,27 +74,27 @@ window.onload = function() {
 </div>
 <div id="sticky-anchor"></div>
 <div id="sticky"><span style="color:white;cursor:pointer;float:right;">&copy;PixelCC</br>
-<span style="cursor:pointer;font-size:10px;color:red;">Happy 2016!</span></span>
+<span style="cursor:pointer;font-size:10px;color:red;">Beep Boop</span></span>
 <img title="Pixelated Cheesecakery!" style="float:left;" src="//eathuis.github.io/pixelcc/images/cheesecake.png" width="50px" height="35px">
-<a href="#" type="button" class="btn btn-info">Home</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a onclick="offline()" style="cursor:pointer;" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
+<a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" style="cursor:pointer;" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
 </br>
-     <div class="content"></br>
-Test
-</div>
+     <div class="content">
+         <p>&nbsp;</p>
+                Test
+        <p>&nbsp;</p>
+    </div>
 </div>
 <div id="contact"></div>
 <div id="footerinfo">
 Email: <a title="YAY! Email, Wooo!" href="mailto:pixelcheesecake@gmail.com">pixelcheesecake@gmail.com</a></br>
-Josh's Email: <a onclick="noemail()" style="cursor:pointer;" title="Ew, why are you emailing him?">eathuis@pixelcc.info</a></br>
-Holly's Email: <a onclick="noemail()" style="cursor:pointer;" title="Will never respond!">hollz100@pixelcc.info</a>
 <p align="center">&nbsp;</p>
 &diams; External Links &diams;</p>
 &#8226;&nbsp; <a title="Subscribe to our channel" href="//youtube.com/pixelcheesecake" type="button" class="btn btn-danger btn-sm" target="_blank">YouTube</a> &#8226;&nbsp; <a title="Join in on the Gaming Fun!" href="//steamcommunity.com/groups/pixelcheesecake" type="button" class="btn btn-warning btn-sm" target="_blank">Steam Group</a> &#8226;&nbsp; <a title="Follow us!" href="//twitter.com/pixelcheesecake" type="button" class="btn btn-info btn-sm" target="_blank">Twitter</a> &#8226;&nbsp; <a title="Like our page!" href="//fb.me/pixelcc" type="button" class="btn btn-primary btn-sm" target="_blank">Facebook</a> &#8226;&nbsp; <a title="Reddit away!" href="//reddit.com/r/pixelcheesecake" type="button" class="btn btn-success btn-sm" target="_blank">Subreddit</a> &#8226;&nbsp; <a title="Ask us anything!" href="//ask.fm/pixelcheesecake" type="button" class="btn btn-danger btn-sm" target="_blank">Ask FM</a> &#8226;&nbsp; 
 <p align="center">&nbsp;</p>
-&copy;PixelCheeseCake&trade; 2012. &nbsp; All Rights Reserved.</br>
+&copy;PixelCheeseCake&trade; 2012 - 2016. &nbsp; All Rights Reserved.</br>
 <span style="font-size:x-small;">Artwork by <a href="//optical-pyro.deviantart.com" target="_blank">Optical_Pyro</a></span></p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/2.5/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/">Creative Commons Attribution-NonCommercial 2.5 Generic License</a>.</div>
 </div>
 </body>
-<!-- eathuis@pixelcc.info --!>
+<!-- eathuis@gmail.com --!>
   </html>
