--- a/unicorns.html
+++ b/unicorns.html
@@ -7,10 +7,9 @@
 </head>
 <body>
 <p align="center">&nbsp;</p>
-<p style="font-family: 'Anton', sans-serif;font-size:40px;" align="center">
-<font color=red>TEH</font> <font color=orange>FLUFFEH</font> <span style="color:#F7FE2E;font-size:50px;">UNICORN</span> 
-<font color=#64FE2E>DANCING</font>
-<font color=#00BFFF>ON</font> <font color=#0404B4>RAINBOWS</font> <font color=#5F04B4>YAYUH</font></p>
+<span class="rainbow" style="font-family: 'Anton', sans-serif;font-size:40px;" align="center">
+  TEH FLUFFEH UNICORN DANCING ON RAINBOWS
+</span></p>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/sJOD7Bsllso&autoplay=1" frameborder="0" allowfullscreen></iframe>
                 <marquee direction="down" width="100%" height="100%" behavior="alternate" >
   <marquee behavior="alternate">
