--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -17,11 +17,9 @@ __________.__              .__  _________ .__                                   
    <meta name="author" content="Josh 'Eathuis' Wilson">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Staff &diams; PixelCheeseCake</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="//eathuis.github.io/pixelcc/css/stylesheet.css">
    <script src="//eathuis.github.io/pixelcc/pixelcc.js"></script>
    <script src="//eathuis.github.io/pixelcc/twitter.js"></script>
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
    <script src="jquery.slides.min.js"></script>
@@ -76,7 +74,7 @@ window.onload = function() {
 <div id="sticky"><span style="color:white;cursor:pointer;float:right;">&copy;PixelCC</br>
 <span style="cursor:pointer;font-size:10px;color:red;">Beep Boop</span></span>
 <img title="Pixelated Cheesecakery!" style="float:left;" src="//eathuis.github.io/pixelcc/images/cheesecake.png" width="50px" height="35px">
-<a href="#" type="button" class="btn btn-info">About</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" style="cursor:pointer;" type="button" class="btn btn-danger" title="Offline Mode" target="_blank">Forums</a></p></div>
+<a href="#" type="button" class="styled-button-4">About</a> &nbsp; <a href="#" type="button" class="styled-button-4">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="styled-button-4">Staff</a> &nbsp; <a href="#" type="button" class="styled-button-4">Contact</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" style="cursor:pointer;" type="button" class="styled-button-4" title="Offline Mode" target="_blank">Forums</a></p></div>
 </br>
      <div class="content">
          <p>&nbsp;</p>
