--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -17,9 +17,11 @@ __________.__              .__  _________ .__                                   
    <meta name="author" content="Josh 'Eathuis' Wilson">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Staff &diams; PixelCheeseCake</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="//eathuis.github.io/pixelcc/css/stylesheet.css">
    <script src="//eathuis.github.io/pixelcc/pixelcc.js"></script>
    <script src="//eathuis.github.io/pixelcc/twitter.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
    <script src="jquery.slides.min.js"></script>
