--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -73,10 +73,10 @@ window.onload = function() {
 </div>
 </div>
 <div id="sticky-anchor"></div>
-<div id="sticky"><span style="color:white;cursor:pointer;float:right;">&copy;PixelCC</br>
+<div id="sticky"><span style="color:white;cursor:default;float:right;">&copy;PixelCC</br>
 <span style="cursor:pointer;font-size:10px;color:red;">Beep Boop</span></span>
 <img style="float:left;" src="//eathuis.github.io/pixelcc/images/cheesecake.png" width="50px" height="35px">
-<a href="#" type="button" class="butt">About</a> &nbsp; <a href="#" type="button" class="butt">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="butt">Staff</a> &nbsp; <a href="#" type="button" class="butt">Contact</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" style="cursor:pointer;" type="button" class="butt" title="Offline Mode" target="_blank">Forums</a></p></div>
+<a href="#" type="button" class="butt" title="About">About</a> &nbsp; <a href="#" type="button" class="butt" title="Videos">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="butt" title="Staff">Staff</a> &nbsp; <a href="#" type="button" class="butt" title="Contact">Contact</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" style="cursor:pointer;" type="button" class="butt" title="Offline Mode" title="Forums" target="_blank">Forums</a></p></div>
 </br>
      <div class="content">
          <p>&nbsp;</p>
