--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
    <meta name="author" content="Josh 'Eathuis' Wilson">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Josh Wilson's Online Résumé</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
    <body>
