--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -16,7 +16,7 @@ __________.__              .__  _________ .__                                   
    <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
    <meta name="author" content="Josh 'Eathuis' Wilson">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Staff &diams; PixelCheeseCake</title>
+   <title>PixelCheeseCake</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="//eathuis.github.io/pixelcc/css/stylesheet.css">
    <script src="//eathuis.github.io/pixelcc/pixelcc.js"></script>
