--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -96,5 +96,5 @@ Email: <a title="YAY! Email, Wooo!" href="mailto:pixelcheesecake@gmail.com">pixe
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/2.5/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/">Creative Commons Attribution-NonCommercial 2.5 Generic License</a>.</div>
 </div>
 </body>
-<!-- eathuis@gmail.com --!>
+<!-- eathuis86@gmail.com --!>
   </html>
