--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text" style="font-weight:bold;">J.D. Wilson</span></br> 
-     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/contact">Contact</a></div></div>
+         <div id="header-text" style="font-weight:bold;">Cinnamon Sporks and <span class="rainbow">Unicorn</span> Horns.</span></br> 
+     <a type="button" class="btn" href="#">Home</a>&nbsp;</div>
+     </div>
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
