--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Documentation pertaining to such events of my internet presense will make their 
 there repective authors and cannot be used unless stated otherwise.</p>
 <p align="center">&nbsp;</p>
 </center></div>
+<p align="center">&nbsp;</p>
 <p style="font-family: 'BenchNine', sans-serif;" align="center">&copy; 2014 - 2016</p>
 <p align="center">&nbsp;</p>
 </body>
