--- a/unicorns.html
+++ b/unicorns.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Eathuis || PINK FLUFFEH UNICORNS DANCING ON RAINBOWS!!!</title>
-<link rel="stylesheet" type="text/css" href="/unicorn.css">
+<link rel="stylesheet" type="text/css" href="/unicorns.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
