--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <body>
      <div id="header">
          <div id="header-text" style="font-weight:bold;">Cinnamon Sporks and <span class="rainbow">Unicorn</span> Horns.</span></br> 
-     <a type="button" class="btn" href="#">Home</a>&nbsp;</div>
+     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/pixelcc">PixelCC</a>&nbsp;<a type="button" class="btn" href="/unicorns">Unicorns</a></div>
      </div>
    <div id="page-wrap">
 <center>
