--- a/unicorns.html
+++ b/unicorns.html
@@ -17,7 +17,7 @@
                 </marquee>
                 </marquee>
                </div> 
-               <p style="font-family: 'Karla', sans-serif;" align="center">For <strong>Holly</strong> to help her feel better! &hearts; &nbsp;
+               <p style="font-family: 'Karla', sans-serif;" align="center">For my beautiful girlfirend<strong>Holly</strong> to help her feel better! &hearts; &nbsp;
                Made with the aid of Dr Pepper by <strong>Josh</strong> &diams;</br>
                Update [19/12/14]: Changed the audio source file to a YouTube embed, should run abit smoother.</p> &nbsp; <a href="/">Home</a></body>
 </html>
