--- a/unicorns.html
+++ b/unicorns.html
@@ -19,5 +19,5 @@
                </div> 
                <p style="font-family: 'Karla', sans-serif;" align="center">For my beautiful girlfirend, <strong>Holly</strong> to help her feel better! &hearts; &nbsp;
                Made with the aid of Dr Pepper by <strong>Josh</strong> &diams;</br>
-               Update [19/12/14]: Changed the audio source file to a YouTube embed, should run abit smoother.</p> &nbsp; <a href="/">Home</a></body>
+               &nbsp; <a href="/">Home</a></body>
 </html>
