--- a/unicorns.html
+++ b/unicorns.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <p align="center">&nbsp;</p>
-<span class="rainbow" style="font-family: 'Anton', sans-serif;font-size:40px;" align="center">
-  TEH FLUFFEH UNICORN DANCING ON RAINBOWS
+<span class="rainbow" style="font-family: 'Anton', sans-serif;font-size:40px;">
+  <span align="center">TEH FLUFFEH UNICORN DANCING ON RAINBOWS</span>
 </span></p>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/sJOD7Bsllso&autoplay=1" frameborder="0" allowfullscreen></iframe>
                 <marquee direction="down" width="100%" height="100%" behavior="alternate" >
