--- a/unicorns.html
+++ b/unicorns.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Eathuis || PINK FLUFFEH UNICORNS DANCING ON RAINBOWS!!!</title>
+<title>PINK FLUFFEH UNICORNS DANCING ON RAINBOWS!!!</title>
 <link rel="stylesheet" type="text/css" href="/unicorns.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <p align="center">&nbsp;</p>
 <span class="rainbow" style="font-family: 'Anton', sans-serif;font-size:40px;">
-  <span align="center">TEH FLUFFEH UNICORN DANCING ON RAINBOWS</span>
+  <p align="center">TEH FLUFFEH UNICORN DANCING ON RAINBOWS</p>
 </span></p>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/sJOD7Bsllso&autoplay=1" frameborder="0" allowfullscreen></iframe>
                 <marquee direction="down" width="100%" height="100%" behavior="alternate" >
