--- a/unicorns.html
+++ b/unicorns.html
@@ -8,7 +8,7 @@
 <body>
 <p align="center">&nbsp;</p>
 <span class="rainbow" style="font-family: 'Anton', sans-serif;font-size:40px;">
-  <p align="center">TEH FLUFFEH UNICORN DANCING ON RAINBOWS</p>
+  <center>TEH FLUFFEH UNICORN DANCING ON RAINBOWS</center>
 </span></p>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/sJOD7Bsllso&autoplay=1" frameborder="0" allowfullscreen></iframe>
                 <marquee direction="down" width="100%" height="100%" behavior="alternate" >
