--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -93,7 +93,7 @@ Email: <a title="YAY! Email, Wooo!" href="mailto:pixelcheesecake@gmail.com">pixe
 <p align="center">&nbsp;</p>
 &copy;PixelCheeseCake&trade; 2012 - 2016. &nbsp; All Rights Reserved.</br>
 <span style="font-size:x-small;">Artwork by <a href="//optical-pyro.deviantart.com" target="_blank">Optical_Pyro</a></span></p>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/2.5/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/">Creative Commons Attribution-NonCommercial 2.5 Generic License</a>.</div>
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/" title="This work is licensed under a Creative Commons Attribution-NonCommercial 2.5 Generic License"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/2.5/88x31.png" /></a>.</div>
 </div>
 </body>
 <!-- eathuis86@gmail.com --!>
